add Dashboard and fix create tasks
